--- a/hui-boot-api/src/main/resources/templates/entity.java.vm
+++ b/hui-boot-api/src/main/resources/templates/entity.java.vm
@@ -1,16 +1,17 @@
-package ${package.Entity};
-
-#foreach($pkg in ${table.importPackages})
-import ${pkg};
-#end
-#if(${swagger2})
-import io.swagger.annotations.ApiModel;
+package ${package.Entity}import io.swagger.annotations.ApiModel;
 import io.swagger.annotations.ApiModelProperty;
-#end
-#if(${entityLombokModel})
 import lombok.Data;
 import lombok.EqualsAndHashCode;
 import lombok.experimental.Accessors;
+
+;
+#foreach($pkg in ${table.importPackages})
+	${pkg}
+;
+#end
+#if(${swagger2})
+#end
+#if(${entityLombokModel})
 #end
 
 /**
@@ -33,7 +34,7 @@ import lombok.experimental.Accessors;
 @TableName("${table.name}")
 #end
 #if(${swagger2})
-@ApiModel(value = "${entity}对象", description = "$!{table.comment}")
+@ApiModel(value = "${cfg.tableNamePascal}对象", description = "$!{table.comment}")
 #end
 #if(${superEntityClass})
 public class ${entity} extends ${superEntityClass}#if(${activeRecord})<${entity}>#end {
