--- a/hui-boot-api/src/main/resources/templates/entity.java.vm
+++ b/hui-boot-api/src/main/resources/templates/entity.java.vm
@@ -13,6 +13,10 @@ import lombok.EqualsAndHashCode;
 import lombok.experimental.Accessors;
 #end
 
+import javax.validation.constraints.NotBlank;
+import javax.validation.constraints.NotEmpty;
+import javax.validation.constraints.NotNull;
+
 /**
  * <p>
  * $!{table.comment}
