--- a/hui-boot-api/src/main/resources/templates/entity.java.vm
+++ b/hui-boot-api/src/main/resources/templates/entity.java.vm
@@ -13,10 +13,6 @@ import lombok.EqualsAndHashCode;
 import lombok.experimental.Accessors;
 #end
 
-import javax.validation.constraints.NotBlank;
-import javax.validation.constraints.NotEmpty;
-import javax.validation.constraints.NotNull;
-
 /**
  * <p>
  * $!{table.comment}
@@ -47,108 +43,112 @@ public class ${entity} extends Model<${entity}> {
 public class ${entity} implements Serializable {
 #end
 
-	private static final long serialVersionUID = 1L;
+private static final long serialVersionUID=1L;
 ## ----------  BEGIN 字段循环遍历  ----------
 #foreach($field in ${table.fields})
+    ## 排除不生成某些字段
+    #if(!${field.propertyName.equals("createTime")} && !${field.propertyName.equals(
+        "updateTime")} && !${field.propertyName.equals("modifyTime")})
 
-#if(${field.keyFlag})
-#set($keyPropertyName=${field.propertyName})
-#end
-#if("$!field.comment" != "")
-#if(${swagger2})
-	@ApiModelProperty(value = "${field.comment}")
-#else
-	/**
-	 * ${field.comment}
-	 */
-#end
+        #if(${field.keyFlag})
+            #set($keyPropertyName=${field.propertyName})
+        #end
+        #if("$!field.comment" != "")
+            #if(${swagger2})
+            @ApiModelProperty(value = "${field.comment}")
+            #else
+            /**
+             * ${field.comment}
+             */
+            #end
 #end
 #if(${field.keyFlag})
 ## 主键
-#if(${field.keyIdentityFlag})
-	@TableId(value = "${field.name}", type = IdType.AUTO)
-#elseif(!$null.isNull(${idType}) && "$!idType" != "")
-	@TableId(value = "${field.name}", type = IdType.${idType})
-#elseif(${field.convert})
-	@TableId("${field.name}")
-#end
+    #if(${field.keyIdentityFlag})
+    @TableId(value = "${field.name}", type = IdType.AUTO)
+    #elseif(!$null.isNull(${idType}) && "$!idType" != "")
+    @TableId(value = "${field.name}", type = IdType.${idType})
+    #elseif(${field.convert})
+    @TableId("${field.name}")
+    #end
 ## 普通字段
 #elseif(${field.fill})
-## -----   存在字段填充设置   -----
-#if(${field.convert})
-	@TableField(value = "${field.name}", fill = FieldFill.${field.fill})
-#else
-	@TableField(fill = FieldFill.${field.fill})
-#end
+    ## -----   存在字段填充设置   -----
+    #if(${field.convert})
+    @TableField(value = "${field.name}", fill = FieldFill.${field.fill})
+    #else
+    @TableField(fill = FieldFill.${field.fill})
+    #end
 #elseif(${field.convert})
-	@TableField("${field.name}")
+@TableField("${field.name}")
 #end
-## 乐观锁注解
-#if(${versionFieldName}==${field.name})
-	@Version
-#end
-## 逻辑删除注解
-#if(${logicDeleteFieldName}==${field.name})
-	@TableLogic
-#end
-	private ${field.propertyType} ${field.propertyName};
+        ## 乐观锁注解
+        #if(${versionFieldName}==${field.name})
+        @Version
+        #end
+        ## 逻辑删除注解
+        #if(${logicDeleteFieldName}==${field.name})
+        @TableLogic
+        #end
+    private ${field.propertyType} ${field.propertyName};
+    #end
 #end
 ## ----------  END 字段循环遍历  ----------
 
 #if(!${entityLombokModel})
-#foreach($field in ${table.fields})
-#if(${field.propertyType.equals("boolean")})
-#set($getprefix="is")
-#else
-#set($getprefix="get")
-#end
+    #foreach($field in ${table.fields})
+        #if(${field.propertyType.equals("boolean")})
+            #set($getprefix="is")
+        #else
+            #set($getprefix="get")
+        #end
 
-	public ${field.propertyType} ${getprefix}${field.capitalName}() {
-		return ${field.propertyName};
-	}
+    public ${field.propertyType} ${getprefix}${field.capitalName}(){
+            return ${field.propertyName};
+            }
 
-#if(${entityBuilderModel})
-	public ${entity} set${field.capitalName}(${field.propertyType} ${field.propertyName}) {
-#else
-	public void set${field.capitalName}(${field.propertyType} ${field.propertyName}) {
-#end
-		this.${field.propertyName} = ${field.propertyName};
-#if(${entityBuilderModel})
-		return this;
-#end
-	}
-#end
+        #if(${entityBuilderModel})
+        public ${entity} set${field.capitalName}(${field.propertyType} ${field.propertyName}){
+        #else
+        public void set${field.capitalName}(${field.propertyType} ${field.propertyName}) {
+        #end
+            this.${field.propertyName} = ${field.propertyName};
+        #if(${entityBuilderModel})
+                return this;
+        #end
+            }
+    #end
 #end
 
 #if(${entityColumnConstant})
-#foreach($field in ${table.fields})
-	public static final String ${field.name.toUpperCase()} = "${field.name}";
+    #foreach($field in ${table.fields})
+    public static final String ${field.name.toUpperCase()} ="${field.name}";
 
-#end
+    #end
 #end
 #if(${activeRecord})
-	@Override
-	protected Serializable pkVal() {
-#if(${keyPropertyName})
-		return this.${keyPropertyName};
-#else
-		return null;
-#end
-	}
+@Override
+protected Serializable pkVal(){
+    #if(${keyPropertyName})
+            return this.${keyPropertyName};
+    #else
+            return null;
+    #end
+        }
 
 #end
 #if(!${entityLombokModel})
-	@Override
-	public String toString() {
-		return "${entity}{" +
-#foreach($field in ${table.fields})
-#if($!{foreach.index}==0)
-		"${field.propertyName}=" + ${field.propertyName} +
-#else
-		", ${field.propertyName}=" + ${field.propertyName} +
-#end
-#end
-		"}";
-	}
+@Override
+public String toString() {
+        return "${entity}{" +
+    #foreach($field in ${table.fields})
+        #if($!{foreach.index}==0)
+                "${field.propertyName}=" + ${field.propertyName} +
+        #else
+                ", ${field.propertyName}=" + ${field.propertyName} +
+        #end
+    #end
+        "}";
+        }
 #end
 }
