--- a/hui-boot-api/src/main/resources/templates/entityCreateInput.java.vm
+++ b/hui-boot-api/src/main/resources/templates/entityCreateInput.java.vm
@@ -1,3 +1,6 @@
+package com.hui.project.model.input;
+
+import com.hui.project.common.base.BaseConvertModel;
 #foreach($pkg in ${table.importPackages})
 import ${pkg};
 #end
@@ -10,6 +13,7 @@ import lombok.Data;
 import lombok.EqualsAndHashCode;
 import lombok.experimental.Accessors;
 #end
+import javax.validation.constraints.*;
 
 /**
  * <p>
@@ -20,130 +24,108 @@ import lombok.experimental.Accessors;
  */
 #if(${entityLombokModel})
 @Data
-	#if(${superEntityClass})
-	@EqualsAndHashCode(callSuper = true)
-	#else
-	@EqualsAndHashCode(callSuper = false)
-	#end
+    #if(${superEntityClass})
+    @EqualsAndHashCode(callSuper = true)
+    #else
+    @EqualsAndHashCode(callSuper = false)
+    #end
 @Accessors(chain = true)
 #end
 #if(${swagger2})
 @ApiModel(value = "${cfg.tableNamePascal}创建输入对象", description = "$!{table.comment}")
 #end
-#if(${superEntityClass})
-public class Create${cfg.tableNamePascal}Input extends ${superEntityClass}#if(${activeRecord})<${cfg.tableNamePascal}Entity>#end {
-#elseif(${activeRecord})
-public class Create${cfg.tableNamePascal}Input extends Model<${entity}> {
-#else
-public class Create${cfg.tableNamePascal}Input implements Serializable {
-#end
+    #if(${superEntityClass})
+    public class Create${entity}Input extends BaseConvertModel#if(${activeRecord})<${entity}>#end {
+    #elseif(${activeRecord})
+    public class Create${entity}Input extends Model<${entity}> {
+    #else
+    public class Create${entity}Input implements Serializable {
+    #end
 
-	private static final long serialVersionUID = 1L;
+    private static final long serialVersionUID = 1L;
 ## ----------  BEGIN 字段循环遍历  ----------
-#foreach($field in ${table.fields})
-	## 排除不生成某些字段
-	#if(!${field.propertyName.equals("createTime")} && !${field.propertyName.equals(
-		"updateTime")} && !${field.propertyName.equals("deleted")})
+    #foreach($field in ${table.fields})
+        ## 排除不生成某些字段
+        #if(!${field.propertyName.equals("createTime")} && !${field.propertyName.equals(
+            "updateTime")} && !${field.propertyName.equals("modifyTime")} && !${field.propertyName.equals("deleted")})
 
-		#if(${field.keyFlag})
-			#set($keyPropertyName=${field.propertyName})
-		#end
-		#if("$!field.comment" != "")
-			#if(${swagger2})
-			@ApiModelProperty(value = "${field.comment}")
-			#else
-			/**
-			 * ${field.comment}
-			 */
-			#end
-		#end
-		#if(${field.keyFlag})
-			## 主键
-			#if(${field.keyIdentityFlag})
-			@TableId(value = "${field.name}", type = IdType.AUTO)
-			#elseif(!$null.isNull(${idType}) && "$!idType" != "")
-			@TableId(value = "${field.name}", type = IdType.${idType})
-			#elseif(${field.convert})
-			@TableId("${field.name}")
-			#end
-			## 普通字段
-		#elseif(${field.fill})
-			## -----   存在字段填充设置   -----
-			#if(${field.convert})
-			@TableField(value = "${field.name}", fill = FieldFill.${field.fill})
-			#else
-			@TableField(fill = FieldFill.${field.fill})
-			#end
-		#elseif(${field.convert})
-		@TableField("${field.name}")
-		#end
-		## 乐观锁注解
-		#if(${versionFieldName}==${field.name})
-		@Version
-		#end
-		## 逻辑删除注解
-		#if(${logicDeleteFieldName}==${field.name})
-		@TableLogic
-		#end
-	private ${field.propertyType} ${field.propertyName};
-	#end
+            #if(${field.keyFlag})
+                #set($keyPropertyName=${field.propertyName})
+            #end
+            #if("$!field.comment" != "")
+                #if(${swagger2})
+                @ApiModelProperty(value = "${field.comment}")
+                #else
+                /**
+                 * ${field.comment}
+                 */
+                #end
+            #end
+            #if(${field.keyFlag})
+
+                ## 普通字段
+            #elseif(${field.fill})
+                ## -----   存在字段填充设置   -----
+            #end
+        private ${field.propertyType} ${field.propertyName};
+        #end
 #end
 ## ----------  END 字段循环遍历  ----------
 
-#if(!${entityLombokModel})
-	#foreach($field in ${table.fields})
-		#if(${field.propertyType.equals("boolean")})
-			#set($getprefix="is")
-		#else
-			#set($getprefix="get")
-		#end
+    #if(!${entityLombokModel})
+        #foreach($field in ${table.fields})
+            #if(${field.propertyType.equals("boolean")})
+                #set($getprefix="is")
+            #else
+                #set($getprefix="get")
+            #end
 
-		public ${field.propertyType} ${getprefix}${field.capitalName}() {
-		return ${field.propertyName};
-	}
+            public ${field.propertyType} ${getprefix}${field.capitalName}() {
+            return ${field.propertyName};
+        }
 
-		#if(${entityBuilderModel})
-		public ${entity} set${field.capitalName}(${field.propertyType} ${field.propertyName}) {
-		#else
-			public void set${field.capitalName}(${field.propertyType} ${field.propertyName}) {
-		#end
-		this.${field.propertyName} = ${field.propertyName};
-		#if(${entityBuilderModel})
-			return this;
-		#end
-	}
-	#end
+            #if(${entityBuilderModel})
+            public ${entity} set${field.capitalName}(${field.propertyType} ${field.propertyName}) {
+            #else
+                public void set${field.capitalName}(${field.propertyType} ${field.propertyName}) {
+            #end
+            this.${field.propertyName} = ${field.propertyName};
+            #if(${entityBuilderModel})
+                return this;
+            #end
+        }
+        #end
 #end
 
-#if(${entityColumnConstant})
-	#foreach($field in ${table.fields})
-		public static final String ${field.name.toUpperCase()} = "${field.name}";
+    #if(${entityColumnConstant})
+        #foreach($field in ${table.fields})
+            public static final String ${field.name.toUpperCase()} = "${field.name}";
 
-	#end
+        #end
 #end
-#if(${activeRecord})
-	@Override
-	protected Serializable pkVal() {
-	#if(${keyPropertyName})
-		return this.${keyPropertyName};
-	#else
-		return null;
-	#end
-}
+    #if(${activeRecord})
+        @Override
+        protected Serializable pkVal() {
+        #if(${keyPropertyName})
+            return this.${keyPropertyName};
+        #else
+            return null;
+        #end
+    }
 
-#end
-#if(!${entityLombokModel})
-	@Override
-	public String toString() {
-	return "${entity}{" +
-		#foreach($field in ${table.fields})
-			#if($!{foreach.index}==0)
-					"${field.propertyName}=" + ${field.propertyName} +
-			#else
-					", ${field.propertyName}=" + ${field.propertyName} +
-			#end
-		#end
-			"}";
-}
-#end
+    #end
+    #if(!${entityLombokModel})
+        @Override
+        public String toString() {
+        return "${entity}{" +
+            #foreach($field in ${table.fields})
+                #if($!{foreach.index}==0)
+                        "${field.propertyName}=" + ${field.propertyName} +
+                #else
+                        ", ${field.propertyName}=" + ${field.propertyName} +
+                #end
+            #end
+                "}";
+    }
+    #end
 }
