--- a/hui-boot-api/src/main/resources/templates/entityCreateInput.java.vm
+++ b/hui-boot-api/src/main/resources/templates/entityCreateInput.java.vm
@@ -24,108 +24,107 @@ import javax.validation.constraints.*;
  */
 #if(${entityLombokModel})
 @Data
-    #if(${superEntityClass})
-    @EqualsAndHashCode(callSuper = true)
-    #else
-    @EqualsAndHashCode(callSuper = false)
-    #end
+#if(${superEntityClass})
+@EqualsAndHashCode(callSuper = true)
+#else
+@EqualsAndHashCode(callSuper = false)
+#end
 @Accessors(chain = true)
 #end
 #if(${swagger2})
 @ApiModel(value = "${cfg.tableNamePascal}创建输入对象", description = "$!{table.comment}")
 #end
-    #if(${superEntityClass})
-    public class Create${entity}Input extends BaseConvertModel#if(${activeRecord})<${entity}>#end {
-    #elseif(${activeRecord})
-    public class Create${entity}Input extends Model<${entity}> {
-    #else
-    public class Create${entity}Input implements Serializable {
-    #end
+#if(${superEntityClass})
+public class Create${entity}Input extends BaseConvertModel#if(${activeRecord})<${entity}>#end {
+#elseif(${activeRecord})
+public class Create${entity}Input extends Model<${entity}> {
+#else
+public class Create${entity}Input implements Serializable {
+#end
 
     private static final long serialVersionUID = 1L;
 ## ----------  BEGIN 字段循环遍历  ----------
-    #foreach($field in ${table.fields})
-        ## 排除不生成某些字段
-        #if(!${field.propertyName.equals("createTime")} && !${field.propertyName.equals(
-            "updateTime")} && !${field.propertyName.equals("modifyTime")} && !${field.propertyName.equals("deleted")})
+#foreach($field in ${table.fields})
+## 排除不生成某些字段
+#if(!${field.propertyName.equals("createTime")} && !${field.propertyName.equals("updateTime")} && !${field.propertyName.equals("modifyTime")} && !${field.propertyName.equals("deleted")})
 
-            #if(${field.keyFlag})
-                #set($keyPropertyName=${field.propertyName})
-            #end
-            #if("$!field.comment" != "")
-                #if(${swagger2})
-                @ApiModelProperty(value = "${field.comment}")
-                #else
-                /**
-                 * ${field.comment}
-                 */
-                #end
-            #end
-            #if(${field.keyFlag})
+#if(${field.keyFlag})
+#set($keyPropertyName=${field.propertyName})
+#end
+#if("$!field.comment" != "")
+#if(${swagger2})
+    @ApiModelProperty(value = "${field.comment}")
+#else
+    /**
+     * ${field.comment}
+     */
+#end
+#end
+#if(${field.keyFlag})
 
-                ## 普通字段
-            #elseif(${field.fill})
-                ## -----   存在字段填充设置   -----
-            #end
-        private ${field.propertyType} ${field.propertyName};
-        #end
+## 普通字段
+#elseif(${field.fill})
+## -----   存在字段填充设置   -----
+#end
+    private ${field.propertyType} ${field.propertyName};
+#end
 #end
 ## ----------  END 字段循环遍历  ----------
 
-    #if(!${entityLombokModel})
-        #foreach($field in ${table.fields})
-            #if(${field.propertyType.equals("boolean")})
-                #set($getprefix="is")
-            #else
-                #set($getprefix="get")
-            #end
-
-            public ${field.propertyType} ${getprefix}${field.capitalName}() {
-            return ${field.propertyName};
-        }
-
-            #if(${entityBuilderModel})
-            public ${entity} set${field.capitalName}(${field.propertyType} ${field.propertyName}) {
-            #else
-                public void set${field.capitalName}(${field.propertyType} ${field.propertyName}) {
-            #end
-            this.${field.propertyName} = ${field.propertyName};
-            #if(${entityBuilderModel})
-                return this;
-            #end
-        }
-        #end
+#if(!${entityLombokModel})
+#foreach($field in ${table.fields})
+#if(${field.propertyType.equals("boolean")})
+#set($getprefix="is")
+#else
+#set($getprefix="get")
 #end
 
-    #if(${entityColumnConstant})
-        #foreach($field in ${table.fields})
-            public static final String ${field.name.toUpperCase()} = "${field.name}";
-
-        #end
-#end
-    #if(${activeRecord})
-        @Override
-        protected Serializable pkVal() {
-        #if(${keyPropertyName})
-            return this.${keyPropertyName};
-        #else
-            return null;
-        #end
+    public ${field.propertyType} ${getprefix}${field.capitalName}() {
+        return ${field.propertyName};
     }
 
-    #end
-    #if(!${entityLombokModel})
-        @Override
-        public String toString() {
+#if(${entityBuilderModel})
+    public ${entity} set${field.capitalName}(${field.propertyType} ${field.propertyName}) {
+#else
+    public void set${field.capitalName}(${field.propertyType} ${field.propertyName}) {
+#end
+        this.${field.propertyName} = ${field.propertyName};
+#if(${entityBuilderModel})
+        return this;
+#end
+    }
+#end
+#end
+
+#if(${entityColumnConstant})
+#foreach($field in ${table.fields})
+    public static final String ${field.name.toUpperCase()} = "${field.name}";
+
+#end
+#end
+#if(${activeRecord})
+    @Override
+    protected Serializable pkVal() {
+#if(${keyPropertyName})
+        return this.${keyPropertyName};
+#else
+        return null;
+#end
+    }
+
+#end
+#if(!${entityLombokModel})
+    @Override
+    public String toString() {
         return "${entity}{" +
-            #foreach($field in ${table.fields})
-                #if($!{foreach.index}==0)
-                        "${field.propertyName}=" + ${field.propertyName} +
-                #else
-                        ", ${field.propertyName}=" + ${field.propertyName} +
-                #end
-            #end
-                "}";
+#foreach($field in ${table.fields})
+#if($!{foreach.index}==0)
+        "${field.propertyName}=" + ${field.propertyName} +
+#else
+        ", ${field.propertyName}=" + ${field.propertyName} +
+#end
+#end
+        "}";
     }
-    #end
+#end
 }
