--- a/hui-boot-api/src/main/resources/templates/entityUpdateInput.java.vm
+++ b/hui-boot-api/src/main/resources/templates/entityUpdateInput.java.vm
@@ -23,11 +23,11 @@ import javax.validation.constraints.*;
  */
 #if(${entityLombokModel})
 @Data
-    #if(${superEntityClass})
-    @EqualsAndHashCode(callSuper = true)
-    #else
-    @EqualsAndHashCode(callSuper = false)
-    #end
+#if(${superEntityClass})
+@EqualsAndHashCode(callSuper = true)
+#else
+@EqualsAndHashCode(callSuper = false)
+#end
 @Accessors(chain = true)
 #end
 #if(${swagger2})
@@ -44,87 +44,86 @@ public class Update${entity}Input implements Serializable {
     private static final long serialVersionUID = 1L;
 ## ----------  BEGIN 字段循环遍历  ----------
 #foreach($field in ${table.fields})
-    ## 排除不生成某些字段
-    #if(!${field.propertyName.equals("createTime")} && !${field.propertyName.equals(
-        "updateTime")} && !${field.propertyName.equals("modifyTime")})
+## 排除不生成某些字段
+#if(!${field.propertyName.equals("createTime")} && !${field.propertyName.equals("updateTime")} && !${field.propertyName.equals("modifyTime")})
 
-        #if(${field.keyFlag})
-            #set($keyPropertyName=${field.propertyName})
-        #end
-        #if("$!field.comment" != "")
-            #if(${swagger2})
-            @ApiModelProperty(value = "${field.comment}")
-            #else
-            /**
-             * ${field.comment}
-             */
-            #end
-        #end
-        #if(${field.keyFlag})
+#if(${field.keyFlag})
+#set($keyPropertyName=${field.propertyName})
+#end
+#if("$!field.comment" != "")
+#if(${swagger2})
+    @ApiModelProperty(value = "${field.comment}")
+#else
+    /**
+     * ${field.comment}
+     */
+#end
+#end
+#if(${field.keyFlag})
 
-            ## 普通字段
-        #elseif(${field.fill})
-            ## -----   存在字段填充设置   -----
-        #end
+## 普通字段
+#elseif(${field.fill})
+## -----   存在字段填充设置   -----
+#end
     private ${field.propertyType} ${field.propertyName};
-    #end
+#end
 #end
 ## ----------  END 字段循环遍历  ----------
 
 #if(!${entityLombokModel})
-    #foreach($field in ${table.fields})
-        #if(${field.propertyType.equals("boolean")})
-            #set($getprefix="is")
-        #else
-            #set($getprefix="get")
-        #end
+#foreach($field in ${table.fields})
+#if(${field.propertyType.equals("boolean")})
+#set($getprefix="is")
+#else
+#set($getprefix="get")
+#end
 
-        public ${field.propertyType} ${getprefix}${field.capitalName}() {
+    public ${field.propertyType} ${getprefix}${field.capitalName}() {
         return ${field.propertyName};
     }
 
-        #if(${entityBuilderModel})
-        public ${entity} set${field.capitalName}(${field.propertyType} ${field.propertyName}) {
-        #else
-            public void set${field.capitalName}(${field.propertyType} ${field.propertyName}) {
-        #end
+#if(${entityBuilderModel})
+    public ${entity} set${field.capitalName}(${field.propertyType} ${field.propertyName}) {
+#else
+    public void set${field.capitalName}(${field.propertyType} ${field.propertyName}) {
+#end
         this.${field.propertyName} = ${field.propertyName};
-        #if(${entityBuilderModel})
-            return this;
-        #end
+#if(${entityBuilderModel})
+        return this;
+#end
     }
-    #end
+#end
 #end
 
 #if(${entityColumnConstant})
-    #foreach($field in ${table.fields})
-        public static final String ${field.name.toUpperCase()} = "${field.name}";
+#foreach($field in ${table.fields})
+    public static final String ${field.name.toUpperCase()} = "${field.name}";
 
-    #end
+#end
 #end
 #if(${activeRecord})
     @Override
     protected Serializable pkVal() {
-    #if(${keyPropertyName})
+#if(${keyPropertyName})
         return this.${keyPropertyName};
-    #else
+#else
         return null;
-    #end
-}
+#end
+    }
 
 #end
 #if(!${entityLombokModel})
     @Override
     public String toString() {
-    return "${entity}{" +
-        #foreach($field in ${table.fields})
-            #if($!{foreach.index}==0)
-                    "${field.propertyName}=" + ${field.propertyName} +
-            #else
-                    ", ${field.propertyName}=" + ${field.propertyName} +
-            #end
-        #end
-            "}";
-}
+        return "${entity}{" +
+#foreach($field in ${table.fields})
+#if($!{foreach.index}==0)
+        "${field.propertyName}=" + ${field.propertyName} +
+#else
+        ", ${field.propertyName}=" + ${field.propertyName} +
+#end
+#end
+        "}";
+    }
 #end
 }
