--- a/hui-boot-api/src/main/resources/templates/controller.java.vm
+++ b/hui-boot-api/src/main/resources/templates/controller.java.vm
@@ -49,40 +49,48 @@ public class ${table.controllerName} extends ${superControllerClass} {
     @Autowired
     private ${table.serviceName} ${table.entityPath}Service;
 
-    @ApiOperation("查询$!{table.comment}")
+    /**
+     * 查询$!{table.comment}
+     */
     @GetMapping("/info")
     public Result info(@RequestParam String id) {
         return ResultGenerator.getSuccessResult(${table.entityPath}Service.getById(id));
     }
 
-    @ApiOperation("$!{table.comment}列表分页")
+    /**
+    * $!{table.comment}列表分页
+    */
     @GetMapping("/list")
-    public Result page(Describe${entity}PageVo describe${entity}PageVo) {
+    public Result page(${entity}PageVo vo) {
         startPage();
         startOrderBy();
         List<${entity}> list = ${table.entityPath}Service.list(new LambdaQueryWrapper<${entity}>());
         return ResultGenerator.getSuccessResult(getDataTable(list));
     }
 
-    @ApiOperation("添加$!{table.comment}")
+    /**
+    * 添加$!{table.comment}
+    */
     @PostMapping("/add")
-    public Result add(@RequestBody @Validated Create${entity}Input create${entity}Input) {
-        ${entity} ${table.entityPath} = create${entity}Input.convert(${entity}.class);
+    public Result add(@RequestBody @Validated Create${entity}Input input) {
+        ${entity} ${table.entityPath} = input.convert(${entity}.class);
         return ResultGenerator.getSuccessResult(${table.entityPath}Service.save(${table.entityPath}));
     }
 
-
-    @ApiOperation("修改$!{table.comment}")
+    /**
+    * 修改$!{table.comment}
+    */
     @PostMapping("/edit")
-    public Result edit(@RequestBody @Validated(Update${entity}Input.Update.class) Update${entity}Input update${entity}Input) {
-        ${entity} ${table.entityPath} = update${entity}Input.convert(${entity}.class);
+    public Result edit(@RequestBody @Validated(Update${entity}Input.Update.class) Update${entity}Input input) {
+        ${entity} ${table.entityPath} = input.convert(${entity}.class);
         ${entity} old = ${table.entityPath}Service.getById(${table.entityPath}.getId());
         Assert.notNull(old, "要修改的数据不存在！");
         return ResultGenerator.getSuccessResult(${table.entityPath}Service.updateById(${table.entityPath}));
     }
 
-
-    @ApiOperation("删除$!{table.comment}")
+    /**
+    * 删除$!{table.comment}
+    */
     @PostMapping("/delete")
     public Result delete(@RequestParam String id) {
         return ResultGenerator.getSuccessResult(${table.entityPath}Service.removeById(id));
