--- a/hui-boot-api/src/main/resources/templates/entityUpdateInput.java.vm
+++ b/hui-boot-api/src/main/resources/templates/entityUpdateInput.java.vm
@@ -16,7 +16,7 @@ import javax.validation.constraints.*;
 
 /**
  * <p>
- * $!{table.comment}输入
+ * $!{table.comment}DTO
  * </p>
  *
  * @author ${author}
