--- a/hui-boot-api/src/main/resources/templates/controller.java.vm
+++ b/hui-boot-api/src/main/resources/templates/controller.java.vm
@@ -21,12 +21,12 @@ import ${superControllerClassPackage};
 import ${package.Entity}.${entity};
 import ${package.Service}.${table.serviceName};
 
-import com.hui.project.model.input.*;
-import com.hui.project.model.entity.*;
-import com.hui.project.model.vo.*;
-import com.hui.project.common.page.*;
-import com.hui.project.common.base.Result;
-import com.hui.project.common.base.ResultGenerator;
+import ${cfg.packageDtoPath}.*;
+import ${cfg.packageEntityPath}.*;
+import ${cfg.packageVoPath}.*;
+import ${cfg.packagePagePath}.*;
+import ${cfg.packageCommonPath}.base.Result;
+import ${cfg.packageCommonPath}.base.ResultGenerator;
 
 import java.util.List;
 
@@ -57,7 +57,7 @@ public class ${table.controllerName} extends ${superControllerClass} {
 
     @ApiOperation("$!{table.comment}列表分页")
     @GetMapping("/list")
-    public Result page(Describe${entity}PageVo describe${entity}PageVo) {
+    public Result page(${entity}PageDto dto) {
         startPage();
         startOrderBy();
         List<${entity}> list = ${table.entityPath}Service.list(new LambdaQueryWrapper<${entity}>());
@@ -66,16 +66,16 @@ public class ${table.controllerName} extends ${superControllerClass} {
 
     @ApiOperation("添加$!{table.comment}")
     @PostMapping("/add")
-    public Result add(@RequestBody @Validated Create${entity}Input create${entity}Input) {
-        ${entity} ${table.entityPath} = create${entity}Input.convert(${entity}.class);
+    public Result add(@RequestBody @Validated ${entity}Input input) {
+        ${entity} ${table.entityPath} = input.convert(${entity}.class);
         return ResultGenerator.getSuccessResult(${table.entityPath}Service.save(${table.entityPath}));
     }
 
 
     @ApiOperation("修改$!{table.comment}")
     @PostMapping("/edit")
-    public Result edit(@RequestBody @Validated(Update${entity}Input.Update.class) Update${entity}Input update${entity}Input) {
-        ${entity} ${table.entityPath} = update${entity}Input.convert(${entity}.class);
+    public Result edit(@RequestBody @Validated ${entity}Dto dto) {
+        ${entity} ${table.entityPath} = dto.convert(${entity}.class);
         ${entity} old = ${table.entityPath}Service.getById(${table.entityPath}.getId());
         Assert.notNull(old, "要修改的数据不存在！");
         return ResultGenerator.getSuccessResult(${table.entityPath}Service.updateById(${table.entityPath}));
