代码生成优化4

--- a/hui-boot-api/src/main/resources/templates/controller.java.vm
+++ b/hui-boot-api/src/main/resources/templates/controller.java.vm
@@ -23,8 +23,8 @@ import ${cfg.packageDtoPath}.*;
 import ${cfg.packageEntityPath}.*;
 import ${cfg.packageVoPath}.*;
 import ${cfg.packagePagePath}.*;
-import ${cfg.packageCommonPath}.base.Result;
-import ${cfg.packageCommonPath}.base.ResultGenerator;
+import ${cfg.packageResultPath}.Result;
+import ${cfg.packageResultPath}.ResultGenerator;
 
 import java.util.List;
 
