代码生成优化5:自动判断表中是否有ID和时间字段

--- a/hui-boot-api/src/main/resources/templates/controller.java.vm
+++ b/hui-boot-api/src/main/resources/templates/controller.java.vm
@@ -29,7 +29,7 @@ import ${cfg.packageResultPath}.ResultGenerator;
 import java.util.List;
 
 /**
- * $!{table.comment} 前端控制器
+ * $!{table.comment}
  *
  * @author ${author}
  */
