--- a/hui-boot-api/src/main/resources/templates/serviceImpl.java.vm
+++ b/hui-boot-api/src/main/resources/templates/serviceImpl.java.vm
@@ -9,7 +9,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 /**
  * <p>
- * $!{table.comment} 服务实现类
+ * ${cfg.tableComment} 服务实现类
  * </p>
  *
  * @author ${author}
